--- a/src/font.css
+++ b/src/font.css
@@ -55,3 +55,17 @@
   font-weight: 200 800;
   font-display: swap;
 }
+@font-face {
+  font-family: "DM Serif Display";
+  src: url("/fonts/static/DMSerifDisplay-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "DM Serif Display";
+  src: url("/fonts/static/DMSerifDisplay-Italic.ttf") format("truetype");
+  font-weight: 400;
+  font-display: swap;
+  font-style: italic;
+}
