--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --font-sans: "Manrope", sans-serif;
+  --font-serif: "DM Serif Display", serif;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -42,7 +44,6 @@
 }
 
 :root {
-  font-family: Manrope, sans-serif;
   color-scheme: dark;
 
   --radius: 0.625rem;
@@ -52,7 +53,7 @@
   --card-foreground: oklab(100% 0 -0.00011);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklab(79.37% -0.17797 0.08312);
+  --primary: oklch(81.424% 0.16528 164.897);
   --primary-foreground: oklch(0% 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
